// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Config Snapshots — Critical Rule Entries > core critical rule entries should match snapshot 1`] = `
{
  "eqeqeq": "warn",
  "no-undef": "warn",
  "no-unused-vars": [
    "error",
    {
      "args": "after-used",
      "argsIgnorePattern": "^_",
      "ignoreRestSiblings": true,
      "vars": "all",
      "varsIgnorePattern": "^_",
    },
  ],
  "simple-import-sort/imports": [
    "warn",
    {
      "groups": [
        [
          "^\\u0000",
        ],
        [
          "^node:",
          "^(assert|async_hooks|buffer|child_process|cluster|console|crypto|dgram|diagnostics_channel|dns|domain|events|fs|http|http2|https|inspector|module|net|os|path|perf_hooks|process|punycode|querystring|readline|repl|stream|string_decoder|sys|timers|tls|tty|url|util|v8|vm|wasi|worker_threads|zlib)(/.*|$)",
        ],
        [
          "^virtual:",
          "^astro:",
          "^\\$app/",
          "^\\$env/",
          "^\\$lib/",
          "^#imports",
          "^#build/",
          "^#app/",
        ],
        [
          "^(layouts?|pages?|templates?|organisms?|molecules?|atoms?|components?|ui|views?|screens?)/",
          "^(@/|~/)(layouts?|pages?|templates?|organisms?|molecules?|atoms?|components?|ui|views?|screens?)(/.*|$)",
        ],
        [
          "^(stores?|api|contexts?|hooks?|composables?|services?|lib|models?|utils?|helpers?|configs?|constants?|types?|plugins?|middlewares?|ws|assets?)/",
          "^(@/|~/)(stores?|api|contexts?|hooks?|composables?|services?|lib|models?|utils?|helpers?|configs?|constants?|types?|plugins?|middlewares?|ws|assets?)(/.*|$)",
        ],
        [
          "^.+\\.(css|scss|sass|less|styl|stylus|postcss)$",
        ],
        [
          "^@?\\w",
        ],
        [
          "^@/",
          "^~/",
          "^#",
        ],
        [
          "^\\.\\.(?!/?$)",
          "^\\.\\./?$",
        ],
        [
          "^\\./(?=.*/)(?!/?$)",
          "^\\.(?!/?$)",
          "^\\./?$",
        ],
      ],
    },
  ],
}
`;

exports[`Config Snapshots — Critical Rule Entries > preact critical rule entries should match snapshot 1`] = `
{
  "@eslint-react/exhaustive-deps": "warn",
  "@eslint-react/no-missing-key": "error",
  "@eslint-react/rules-of-hooks": "error",
}
`;

exports[`Config Snapshots — Critical Rule Entries > react critical rule entries should match snapshot 1`] = `
{
  "@eslint-react/exhaustive-deps": "warn",
  "@eslint-react/no-missing-key": "error",
  "@eslint-react/rules-of-hooks": "error",
  "react-compiler/react-compiler": "warn",
}
`;

exports[`Config Snapshots — Critical Rule Entries > typescript critical rule entries should match snapshot 1`] = `
{
  "@typescript-eslint/consistent-type-imports": [
    "warn",
    {
      "fixStyle": "inline-type-imports",
      "prefer": "type-imports",
    },
  ],
  "@typescript-eslint/no-explicit-any": "warn",
  "@typescript-eslint/no-unsafe-assignment": "warn",
  "@typescript-eslint/no-unused-vars": [
    "warn",
    {
      "args": "after-used",
      "argsIgnorePattern": "^_",
      "destructuredArrayIgnorePattern": "^_",
      "ignoreRestSiblings": true,
      "vars": "all",
      "varsIgnorePattern": "^_",
    },
  ],
}
`;

exports[`Config Snapshots — Entry Names > angular config entries should match snapshot 1`] = `
[
  "eslint-config-angular/rules",
]
`;

exports[`Config Snapshots — Entry Names > astro config entries should match snapshot 1`] = `
[
  "astro/base",
  "astro/base/javascript",
  "astro/base/plugin",
  "astro/base/typescript",
  "astro/recommended",
  "eslint-config-astro/custom",
  "eslint-config-astro/virtual-scripts",
]
`;

exports[`Config Snapshots — Entry Names > core config entries should match snapshot 1`] = `
[
  "@eslint/js/recommended",
  "@eslint/js/recommended/slots",
  "eslint-config/core-plugins",
  "eslint-config/custom-rules",
  "eslint-config/custom-rules/slots",
  "eslint-config/plugins-rules",
  "eslint-config/plugins-rules/slots",
  "node/flat/recommended-module",
  "node/flat/recommended-module/slots",
  "promise/flat/recommended",
  "promise/flat/recommended/slots",
  "stylistic/recommended",
  "stylistic/recommended/slots",
]
`;

exports[`Config Snapshots — Entry Names > expo config entries should match snapshot 1`] = `
[
  "eslint-config-expo/custom",
]
`;

exports[`Config Snapshots — Entry Names > hono config entries should match snapshot 1`] = `
[
  "eslint-config-hono/runtime",
  "eslint-config-hono/server-handlers",
]
`;

exports[`Config Snapshots — Entry Names > lit config entries should match snapshot 1`] = `
[
  "eslint-config-lit/lit-recommended",
  "eslint-config-lit/wc-recommended",
]
`;

exports[`Config Snapshots — Entry Names > nest config entries should match snapshot 1`] = `
[
  "@darraghor/nestjs-typed/base",
  "@darraghor/nestjs-typed/recommended",
  "eslint-config-nest/custom",
]
`;

exports[`Config Snapshots — Entry Names > next config entries should match snapshot 1`] = `
[
  "eslint-config-next/custom",
  "eslint-config-next/ignores",
  "eslint-config-next/plugin",
]
`;

exports[`Config Snapshots — Entry Names > nuxt config entries should match snapshot 1`] = `
[
  "eslint-config-nuxt/rules",
  "eslint-config-nuxt/server-runtime",
]
`;

exports[`Config Snapshots — Entry Names > preact config entries should match snapshot 1`] = `
[
  "eslint-config-preact/custom",
  "eslint-config-preact/recommended",
]
`;

exports[`Config Snapshots — Entry Names > qwik config entries should match snapshot 1`] = `
[
  "eslint-config-qwik/rules",
  "eslint-config-qwik/virtual-script-rules",
]
`;

exports[`Config Snapshots — Entry Names > react config entries should match snapshot 1`] = `
[
  "eslint-config-react/custom",
  "eslint-config-react/recommended",
]
`;

exports[`Config Snapshots — Entry Names > react-router config entries should match snapshot 1`] = `
[
  "eslint-config-react-router/jsx-a11y",
  "eslint-config-react-router/virtual-script-rules",
]
`;

exports[`Config Snapshots — Entry Names > slidev config entries should match snapshot 1`] = `
[
  "eslint-config-slidev/deck-markdown",
  "eslint-config-slidev/runtime",
  "eslint-config-slidev/setup-files",
]
`;

exports[`Config Snapshots — Entry Names > solid config entries should match snapshot 1`] = `
[
  "eslint-config-solid/rules",
]
`;

exports[`Config Snapshots — Entry Names > svelte config entries should match snapshot 1`] = `
[
  "eslint-config-svelte/rules",
  "eslint-config-svelte/virtual-script-rules",
  "svelte:base:setup-for-svelte",
  "svelte:base:setup-for-svelte-script",
  "svelte:base:setup-plugin",
  "svelte:recommended:rules",
]
`;

exports[`Config Snapshots — Entry Names > tanstack-start config entries should match snapshot 1`] = `
[
  "eslint-config-tanstack-start/query",
  "eslint-config-tanstack-start/router",
]
`;

exports[`Config Snapshots — Entry Names > typescript config entries should match snapshot 1`] = `
[
  "eslint-config-typescript/parser-setup",
  "eslint-config-typescript/setup",
  "eslint-config-typescript/standard-rules",
  "eslint-config-typescript/type-checked-rules",
  "typescript-eslint/base",
  "typescript-eslint/base",
  "typescript-eslint/eslint-recommended",
  "typescript-eslint/eslint-recommended",
  "typescript-eslint/eslint-recommended/rules-only",
  "typescript-eslint/eslint-recommended/rules-only",
  "typescript-eslint/strict-type-checked",
  "typescript-eslint/strict-type-checked/rules-only",
  "typescript-eslint/stylistic-type-checked",
  "typescript-eslint/stylistic-type-checked/rules-only",
]
`;

exports[`Config Snapshots — Entry Names > vite config entries should match snapshot 1`] = `
[
  "eslint-config-vite/config-files",
  "eslint-config-vite/runtime",
]
`;

exports[`Config Snapshots — Entry Names > vue config entries should match snapshot 1`] = `
[
  "eslint-config-vue/rules",
  "eslint-config-vue/virtual-script-rules",
  "vue/base/setup",
  "vue/base/setup-for-vue",
  "vue/essential/rules",
  "vue/recommended/rules",
  "vue/strongly-recommended/rules",
]
`;

exports[`Config Snapshots — Rule Names > angular config rules should match snapshot 1`] = `
[
  "@angular-eslint/component-class-suffix",
  "@angular-eslint/directive-class-suffix",
  "@angular-eslint/no-empty-lifecycle-method",
  "@angular-eslint/no-output-native",
  "@angular-eslint/use-lifecycle-interface",
  "@angular-eslint/use-pipe-transform-interface",
]
`;

exports[`Config Snapshots — Rule Names > astro config rules should match snapshot 1`] = `
[
  "@stylistic/comma-dangle",
  "@stylistic/jsx-indent",
  "@stylistic/jsx-indent-props",
  "@stylistic/jsx-one-expression-per-line",
  "@stylistic/jsx-tag-spacing",
  "@stylistic/quote-props",
  "@typescript-eslint/no-unsafe-return",
  "@typescript-eslint/no-unused-expressions",
  "astro/missing-client-only-directive-value",
  "astro/no-conflict-set-directives",
  "astro/no-deprecated-astro-canonicalurl",
  "astro/no-deprecated-astro-fetchcontent",
  "astro/no-deprecated-astro-resolve",
  "astro/no-deprecated-getentrybyslug",
  "astro/no-unused-define-vars-in-style",
  "astro/valid-compile",
  "no-unused-expressions",
  "no-unused-vars",
  "prettier/prettier",
  "simple-import-sort/imports",
]
`;

exports[`Config Snapshots — Rule Names > core config rules should match snapshot 1`] = `
[
  "@stylistic/array-bracket-spacing",
  "@stylistic/array-element-newline",
  "@stylistic/arrow-parens",
  "@stylistic/arrow-spacing",
  "@stylistic/block-spacing",
  "@stylistic/brace-style",
  "@stylistic/comma-dangle",
  "@stylistic/comma-spacing",
  "@stylistic/comma-style",
  "@stylistic/computed-property-spacing",
  "@stylistic/dot-location",
  "@stylistic/eol-last",
  "@stylistic/function-call-argument-newline",
  "@stylistic/function-paren-newline",
  "@stylistic/generator-star-spacing",
  "@stylistic/implicit-arrow-linebreak",
  "@stylistic/indent",
  "@stylistic/indent-binary-ops",
  "@stylistic/jsx-closing-bracket-location",
  "@stylistic/jsx-closing-tag-location",
  "@stylistic/jsx-curly-brace-presence",
  "@stylistic/jsx-curly-newline",
  "@stylistic/jsx-curly-spacing",
  "@stylistic/jsx-equals-spacing",
  "@stylistic/jsx-first-prop-new-line",
  "@stylistic/jsx-function-call-newline",
  "@stylistic/jsx-indent-props",
  "@stylistic/jsx-max-props-per-line",
  "@stylistic/jsx-one-expression-per-line",
  "@stylistic/jsx-quotes",
  "@stylistic/jsx-tag-spacing",
  "@stylistic/jsx-wrap-multilines",
  "@stylistic/key-spacing",
  "@stylistic/keyword-spacing",
  "@stylistic/lines-around-comment",
  "@stylistic/lines-between-class-members",
  "@stylistic/max-len",
  "@stylistic/max-statements-per-line",
  "@stylistic/member-delimiter-style",
  "@stylistic/multiline-comment-style",
  "@stylistic/multiline-ternary",
  "@stylistic/new-parens",
  "@stylistic/no-extra-parens",
  "@stylistic/no-extra-semi",
  "@stylistic/no-floating-decimal",
  "@stylistic/no-mixed-operators",
  "@stylistic/no-mixed-spaces-and-tabs",
  "@stylistic/no-multi-spaces",
  "@stylistic/no-multiple-empty-lines",
  "@stylistic/no-tabs",
  "@stylistic/no-trailing-spaces",
  "@stylistic/no-whitespace-before-property",
  "@stylistic/object-curly-spacing",
  "@stylistic/object-property-newline",
  "@stylistic/operator-linebreak",
  "@stylistic/padded-blocks",
  "@stylistic/padding-line-between-statements",
  "@stylistic/quote-props",
  "@stylistic/quotes",
  "@stylistic/rest-spread-spacing",
  "@stylistic/semi",
  "@stylistic/semi-spacing",
  "@stylistic/space-before-blocks",
  "@stylistic/space-before-function-paren",
  "@stylistic/space-in-parens",
  "@stylistic/space-infix-ops",
  "@stylistic/space-unary-ops",
  "@stylistic/spaced-comment",
  "@stylistic/template-curly-spacing",
  "@stylistic/template-tag-spacing",
  "@stylistic/type-annotation-spacing",
  "@stylistic/type-generic-spacing",
  "@stylistic/type-named-tuple-spacing",
  "@stylistic/wrap-iife",
  "@stylistic/yield-star-spacing",
  "array-callback-return",
  "arrow-body-style",
  "brace-style",
  "camelcase",
  "comma-dangle",
  "constructor-super",
  "eqeqeq",
  "for-direction",
  "func-style",
  "getter-return",
  "import/export",
  "import/first",
  "import/no-duplicates",
  "indent",
  "jsx-a11y/alt-text",
  "n/hashbang",
  "n/no-deprecated-api",
  "n/no-exports-assign",
  "n/no-extraneous-import",
  "n/no-extraneous-require",
  "n/no-missing-import",
  "n/no-missing-require",
  "n/no-process-exit",
  "n/no-unpublished-import",
  "n/no-unpublished-require",
  "n/no-unsupported-features/es-builtins",
  "n/no-unsupported-features/es-syntax",
  "n/no-unsupported-features/node-builtins",
  "n/process-exit-as-throw",
  "no-async-promise-executor",
  "no-case-declarations",
  "no-class-assign",
  "no-compare-neg-zero",
  "no-cond-assign",
  "no-const-assign",
  "no-constant-binary-expression",
  "no-constant-condition",
  "no-control-regex",
  "no-debugger",
  "no-delete-var",
  "no-dupe-args",
  "no-dupe-class-members",
  "no-dupe-else-if",
  "no-dupe-keys",
  "no-duplicate-case",
  "no-empty",
  "no-empty-character-class",
  "no-empty-pattern",
  "no-empty-static-block",
  "no-ex-assign",
  "no-extra-boolean-cast",
  "no-fallthrough",
  "no-func-assign",
  "no-global-assign",
  "no-import-assign",
  "no-invalid-regexp",
  "no-irregular-whitespace",
  "no-loss-of-precision",
  "no-misleading-character-class",
  "no-nested-ternary",
  "no-new",
  "no-new-native-nonconstructor",
  "no-nonoctal-decimal-escape",
  "no-obj-calls",
  "no-octal",
  "no-prototype-builtins",
  "no-redeclare",
  "no-regex-spaces",
  "no-self-assign",
  "no-setter-return",
  "no-shadow-restricted-names",
  "no-sparse-arrays",
  "no-this-before-super",
  "no-unassigned-vars",
  "no-undef",
  "no-unexpected-multiline",
  "no-unreachable",
  "no-unsafe-finally",
  "no-unsafe-negation",
  "no-unsafe-optional-chaining",
  "no-unused-labels",
  "no-unused-private-class-members",
  "no-unused-vars",
  "no-use-before-define",
  "no-useless-assignment",
  "no-useless-backreference",
  "no-useless-catch",
  "no-useless-constructor",
  "no-useless-escape",
  "no-useless-return",
  "no-void",
  "no-with",
  "operator-linebreak",
  "prefer-arrow-callback",
  "prefer-promise-reject-errors",
  "prefer-regex-literals",
  "preserve-caught-error",
  "promise/always-return",
  "promise/avoid-new",
  "promise/catch-or-return",
  "promise/no-callback-in-promise",
  "promise/no-native",
  "promise/no-nesting",
  "promise/no-new-statics",
  "promise/no-promise-in-callback",
  "promise/no-return-in-finally",
  "promise/no-return-wrap",
  "promise/param-names",
  "promise/valid-params",
  "quote-props",
  "quotes",
  "require-yield",
  "simple-import-sort/exports",
  "simple-import-sort/imports",
  "space-before-function-paren",
  "unused-imports/no-unused-imports",
  "use-isnan",
  "valid-typeof",
]
`;

exports[`Config Snapshots — Rule Names > expo config rules should match snapshot 1`] = `
[
  "eqeqeq",
  "expo/no-dynamic-env-var",
  "expo/no-env-var-destructuring",
  "expo/use-dom-exports",
  "no-dupe-args",
  "no-dupe-class-members",
  "no-dupe-keys",
  "no-duplicate-case",
  "no-empty-character-class",
  "no-empty-pattern",
  "no-extend-native",
  "no-extra-bind",
  "no-redeclare",
  "no-undef",
  "no-unreachable",
  "no-unsafe-negation",
  "no-unused-expressions",
  "no-unused-labels",
  "no-unused-vars",
  "no-useless-constructor",
  "no-useless-return",
  "no-var",
  "no-with",
  "unicode-bom",
  "use-isnan",
  "valid-typeof",
]
`;

exports[`Config Snapshots — Rule Names > hono config rules should match snapshot 1`] = `
[
  "n/no-process-env",
]
`;

exports[`Config Snapshots — Rule Names > lit config rules should match snapshot 1`] = `
[
  "lit/attribute-value-entities",
  "lit/binding-positions",
  "lit/no-duplicate-template-bindings",
  "lit/no-invalid-html",
  "lit/no-legacy-template-syntax",
  "lit/no-property-change-update",
  "wc/no-constructor-attributes",
  "wc/no-invalid-element-name",
  "wc/no-self-class",
]
`;

exports[`Config Snapshots — Rule Names > nest config rules should match snapshot 1`] = `
[
  "@darraghor/nestjs-typed/all-properties-are-whitelisted",
  "@darraghor/nestjs-typed/all-properties-have-explicit-defined",
  "@darraghor/nestjs-typed/api-enum-property-best-practices",
  "@darraghor/nestjs-typed/api-method-should-specify-api-operation",
  "@darraghor/nestjs-typed/api-method-should-specify-api-response",
  "@darraghor/nestjs-typed/api-methods-should-be-guarded",
  "@darraghor/nestjs-typed/api-operation-summary-description-capitalized",
  "@darraghor/nestjs-typed/api-property-matches-property-optionality",
  "@darraghor/nestjs-typed/api-property-returning-array-should-set-array",
  "@darraghor/nestjs-typed/api-property-should-have-api-extra-models",
  "@darraghor/nestjs-typed/controllers-should-supply-api-tags",
  "@darraghor/nestjs-typed/injectable-should-be-provided",
  "@darraghor/nestjs-typed/no-duplicate-decorators",
  "@darraghor/nestjs-typed/param-decorator-name-matches-route-param",
  "@darraghor/nestjs-typed/provided-injected-should-match-factory-parameters",
  "@darraghor/nestjs-typed/sort-module-metadata-arrays",
  "@darraghor/nestjs-typed/use-correct-endpoint-naming-convention",
  "@darraghor/nestjs-typed/use-dependency-injection",
  "@darraghor/nestjs-typed/use-injectable-provided-token",
  "@darraghor/nestjs-typed/validate-nested-of-array-should-set-each",
  "@darraghor/nestjs-typed/validated-non-primitive-property-needs-type-decorator",
  "@darraghor/nestjs-typed/validation-pipe-should-use-forbid-unknown",
  "simple-import-sort/imports",
]
`;

exports[`Config Snapshots — Rule Names > next config rules should match snapshot 1`] = `
[
  "@next/next/google-font-display",
  "@next/next/google-font-preconnect",
  "@next/next/inline-script-id",
  "@next/next/next-script-for-ga",
  "@next/next/no-assign-module-variable",
  "@next/next/no-async-client-component",
  "@next/next/no-before-interactive-script-outside-document",
  "@next/next/no-css-tags",
  "@next/next/no-document-import-in-page",
  "@next/next/no-duplicate-head",
  "@next/next/no-head-element",
  "@next/next/no-head-import-in-document",
  "@next/next/no-html-link-for-pages",
  "@next/next/no-img-element",
  "@next/next/no-page-custom-font",
  "@next/next/no-script-component-in-head",
  "@next/next/no-styled-jsx-in-document",
  "@next/next/no-sync-scripts",
  "@next/next/no-title-in-document-head",
  "@next/next/no-typos",
  "@next/next/no-unwanted-polyfillio",
  "simple-import-sort/imports",
]
`;

exports[`Config Snapshots — Rule Names > nuxt config rules should match snapshot 1`] = `
[
  "nuxt/prefer-import-meta",
]
`;

exports[`Config Snapshots — Rule Names > preact config rules should match snapshot 1`] = `
[
  "@eslint-react/dom-no-dangerously-set-innerhtml",
  "@eslint-react/dom-no-dangerously-set-innerhtml-with-children",
  "@eslint-react/dom-no-find-dom-node",
  "@eslint-react/dom-no-flush-sync",
  "@eslint-react/dom-no-hydrate",
  "@eslint-react/dom-no-missing-button-type",
  "@eslint-react/dom-no-render",
  "@eslint-react/dom-no-render-return-value",
  "@eslint-react/dom-no-script-url",
  "@eslint-react/dom-no-unsafe-iframe-sandbox",
  "@eslint-react/dom-no-unsafe-target-blank",
  "@eslint-react/dom-no-use-form-state",
  "@eslint-react/dom-no-void-elements-with-children",
  "@eslint-react/error-boundaries",
  "@eslint-react/exhaustive-deps",
  "@eslint-react/jsx-no-children-prop",
  "@eslint-react/jsx-no-children-prop-with-children",
  "@eslint-react/jsx-no-comment-textnodes",
  "@eslint-react/jsx-no-key-after-spread",
  "@eslint-react/jsx-no-leaked-dollar",
  "@eslint-react/jsx-no-leaked-semicolon",
  "@eslint-react/jsx-no-namespace",
  "@eslint-react/naming-convention-context-name",
  "@eslint-react/naming-convention-id-name",
  "@eslint-react/naming-convention-ref-name",
  "@eslint-react/no-access-state-in-setstate",
  "@eslint-react/no-array-index-key",
  "@eslint-react/no-children-count",
  "@eslint-react/no-children-for-each",
  "@eslint-react/no-children-map",
  "@eslint-react/no-children-only",
  "@eslint-react/no-children-to-array",
  "@eslint-react/no-clone-element",
  "@eslint-react/no-component-will-mount",
  "@eslint-react/no-component-will-receive-props",
  "@eslint-react/no-component-will-update",
  "@eslint-react/no-context-provider",
  "@eslint-react/no-create-ref",
  "@eslint-react/no-direct-mutation-state",
  "@eslint-react/no-forward-ref",
  "@eslint-react/no-missing-key",
  "@eslint-react/no-nested-component-definitions",
  "@eslint-react/no-nested-lazy-component-declarations",
  "@eslint-react/no-set-state-in-component-did-mount",
  "@eslint-react/no-set-state-in-component-did-update",
  "@eslint-react/no-set-state-in-component-will-update",
  "@eslint-react/no-unnecessary-use-prefix",
  "@eslint-react/no-unsafe-component-will-mount",
  "@eslint-react/no-unsafe-component-will-receive-props",
  "@eslint-react/no-unsafe-component-will-update",
  "@eslint-react/no-unstable-default-props",
  "@eslint-react/no-unused-class-component-members",
  "@eslint-react/no-use-context",
  "@eslint-react/purity",
  "@eslint-react/rsc-function-definition",
  "@eslint-react/rules-of-hooks",
  "@eslint-react/set-state-in-effect",
  "@eslint-react/set-state-in-render",
  "@eslint-react/static-components",
  "@eslint-react/unsupported-syntax",
  "@eslint-react/use-memo",
  "@eslint-react/use-state",
  "@eslint-react/web-api-no-leaked-event-listener",
  "@eslint-react/web-api-no-leaked-fetch",
  "@eslint-react/web-api-no-leaked-interval",
  "@eslint-react/web-api-no-leaked-resize-observer",
  "@eslint-react/web-api-no-leaked-timeout",
  "simple-import-sort/imports",
]
`;

exports[`Config Snapshots — Rule Names > qwik config rules should match snapshot 1`] = `
[
  "@typescript-eslint/no-unused-expressions",
  "no-unused-expressions",
  "qwik/jsx-a",
  "qwik/jsx-img",
  "qwik/jsx-key",
  "qwik/jsx-no-script-url",
  "qwik/loader-location",
  "qwik/no-async-prevent-default",
  "qwik/no-react-props",
  "qwik/no-use-visible-task",
  "qwik/prefer-classlist",
  "qwik/unused-server",
  "qwik/use-method-usage",
  "qwik/valid-lexical-scope",
]
`;

exports[`Config Snapshots — Rule Names > react config rules should match snapshot 1`] = `
[
  "@eslint-react/dom-no-dangerously-set-innerhtml",
  "@eslint-react/dom-no-dangerously-set-innerhtml-with-children",
  "@eslint-react/dom-no-find-dom-node",
  "@eslint-react/dom-no-flush-sync",
  "@eslint-react/dom-no-hydrate",
  "@eslint-react/dom-no-missing-button-type",
  "@eslint-react/dom-no-render",
  "@eslint-react/dom-no-render-return-value",
  "@eslint-react/dom-no-script-url",
  "@eslint-react/dom-no-unsafe-iframe-sandbox",
  "@eslint-react/dom-no-unsafe-target-blank",
  "@eslint-react/dom-no-use-form-state",
  "@eslint-react/dom-no-void-elements-with-children",
  "@eslint-react/error-boundaries",
  "@eslint-react/exhaustive-deps",
  "@eslint-react/jsx-no-children-prop",
  "@eslint-react/jsx-no-children-prop-with-children",
  "@eslint-react/jsx-no-comment-textnodes",
  "@eslint-react/jsx-no-key-after-spread",
  "@eslint-react/jsx-no-leaked-dollar",
  "@eslint-react/jsx-no-leaked-semicolon",
  "@eslint-react/jsx-no-namespace",
  "@eslint-react/naming-convention-context-name",
  "@eslint-react/naming-convention-id-name",
  "@eslint-react/naming-convention-ref-name",
  "@eslint-react/no-access-state-in-setstate",
  "@eslint-react/no-array-index-key",
  "@eslint-react/no-children-count",
  "@eslint-react/no-children-for-each",
  "@eslint-react/no-children-map",
  "@eslint-react/no-children-only",
  "@eslint-react/no-children-to-array",
  "@eslint-react/no-clone-element",
  "@eslint-react/no-component-will-mount",
  "@eslint-react/no-component-will-receive-props",
  "@eslint-react/no-component-will-update",
  "@eslint-react/no-context-provider",
  "@eslint-react/no-create-ref",
  "@eslint-react/no-direct-mutation-state",
  "@eslint-react/no-forward-ref",
  "@eslint-react/no-missing-key",
  "@eslint-react/no-nested-component-definitions",
  "@eslint-react/no-nested-lazy-component-declarations",
  "@eslint-react/no-set-state-in-component-did-mount",
  "@eslint-react/no-set-state-in-component-did-update",
  "@eslint-react/no-set-state-in-component-will-update",
  "@eslint-react/no-unnecessary-use-prefix",
  "@eslint-react/no-unsafe-component-will-mount",
  "@eslint-react/no-unsafe-component-will-receive-props",
  "@eslint-react/no-unsafe-component-will-update",
  "@eslint-react/no-unstable-default-props",
  "@eslint-react/no-unused-class-component-members",
  "@eslint-react/no-use-context",
  "@eslint-react/purity",
  "@eslint-react/rsc-function-definition",
  "@eslint-react/rules-of-hooks",
  "@eslint-react/set-state-in-effect",
  "@eslint-react/set-state-in-render",
  "@eslint-react/static-components",
  "@eslint-react/unsupported-syntax",
  "@eslint-react/use-memo",
  "@eslint-react/use-state",
  "@eslint-react/web-api-no-leaked-event-listener",
  "@eslint-react/web-api-no-leaked-fetch",
  "@eslint-react/web-api-no-leaked-interval",
  "@eslint-react/web-api-no-leaked-resize-observer",
  "@eslint-react/web-api-no-leaked-timeout",
  "react-compiler/react-compiler",
  "react-refresh/only-export-components",
  "simple-import-sort/imports",
]
`;

exports[`Config Snapshots — Rule Names > react-router config rules should match snapshot 1`] = `
[
  "@typescript-eslint/no-unused-expressions",
  "jsx-a11y/alt-text",
  "jsx-a11y/anchor-ambiguous-text",
  "jsx-a11y/anchor-has-content",
  "jsx-a11y/anchor-is-valid",
  "jsx-a11y/aria-activedescendant-has-tabindex",
  "jsx-a11y/aria-props",
  "jsx-a11y/aria-proptypes",
  "jsx-a11y/aria-role",
  "jsx-a11y/aria-unsupported-elements",
  "jsx-a11y/autocomplete-valid",
  "jsx-a11y/click-events-have-key-events",
  "jsx-a11y/control-has-associated-label",
  "jsx-a11y/heading-has-content",
  "jsx-a11y/html-has-lang",
  "jsx-a11y/iframe-has-title",
  "jsx-a11y/img-redundant-alt",
  "jsx-a11y/interactive-supports-focus",
  "jsx-a11y/label-has-associated-control",
  "jsx-a11y/label-has-for",
  "jsx-a11y/media-has-caption",
  "jsx-a11y/mouse-events-have-key-events",
  "jsx-a11y/no-access-key",
  "jsx-a11y/no-autofocus",
  "jsx-a11y/no-distracting-elements",
  "jsx-a11y/no-interactive-element-to-noninteractive-role",
  "jsx-a11y/no-noninteractive-element-interactions",
  "jsx-a11y/no-noninteractive-element-to-interactive-role",
  "jsx-a11y/no-noninteractive-tabindex",
  "jsx-a11y/no-redundant-roles",
  "jsx-a11y/no-static-element-interactions",
  "jsx-a11y/role-has-required-aria-props",
  "jsx-a11y/role-supports-aria-props",
  "jsx-a11y/scope",
  "jsx-a11y/tabindex-no-positive",
  "no-unused-expressions",
]
`;

exports[`Config Snapshots — Rule Names > slidev config rules should match snapshot 1`] = `
[
  "@stylistic/max-len",
  "n/no-extraneous-import",
  "n/no-unpublished-import",
  "no-undef",
  "no-unused-expressions",
  "vue/array-bracket-newline",
  "vue/array-bracket-spacing",
  "vue/array-element-newline",
  "vue/arrow-spacing",
  "vue/attribute-hyphenation",
  "vue/attributes-order",
  "vue/block-lang",
  "vue/block-order",
  "vue/block-spacing",
  "vue/block-tag-newline",
  "vue/brace-style",
  "vue/camelcase",
  "vue/comma-dangle",
  "vue/comma-spacing",
  "vue/comma-style",
  "vue/comment-directive",
  "vue/component-api-style",
  "vue/component-definition-name-casing",
  "vue/component-name-in-template-casing",
  "vue/component-options-name-casing",
  "vue/custom-event-name-casing",
  "vue/define-emits-declaration",
  "vue/define-macros-order",
  "vue/define-props-declaration",
  "vue/define-props-destructuring",
  "vue/dot-location",
  "vue/dot-notation",
  "vue/enforce-style-attribute",
  "vue/eqeqeq",
  "vue/first-attribute-linebreak",
  "vue/func-call-spacing",
  "vue/html-button-has-type",
  "vue/html-closing-bracket-newline",
  "vue/html-closing-bracket-spacing",
  "vue/html-comment-content-newline",
  "vue/html-comment-content-spacing",
  "vue/html-comment-indent",
  "vue/html-end-tags",
  "vue/html-indent",
  "vue/html-quotes",
  "vue/html-self-closing",
  "vue/jsx-uses-vars",
  "vue/key-spacing",
  "vue/keyword-spacing",
  "vue/match-component-file-name",
  "vue/match-component-import-name",
  "vue/max-attributes-per-line",
  "vue/max-len",
  "vue/max-lines-per-block",
  "vue/max-props",
  "vue/max-template-depth",
  "vue/multi-word-component-names",
  "vue/multiline-html-element-content-newline",
  "vue/multiline-ternary",
  "vue/mustache-interpolation-spacing",
  "vue/new-line-between-multi-line-property",
  "vue/next-tick-style",
  "vue/no-arrow-functions-in-watch",
  "vue/no-async-in-computed-properties",
  "vue/no-bare-strings-in-template",
  "vue/no-boolean-default",
  "vue/no-child-content",
  "vue/no-computed-properties-in-data",
  "vue/no-console",
  "vue/no-constant-condition",
  "vue/no-custom-modifiers-on-v-model",
  "vue/no-deprecated-data-object-declaration",
  "vue/no-deprecated-delete-set",
  "vue/no-deprecated-destroyed-lifecycle",
  "vue/no-deprecated-dollar-listeners-api",
  "vue/no-deprecated-dollar-scopedslots-api",
  "vue/no-deprecated-events-api",
  "vue/no-deprecated-filter",
  "vue/no-deprecated-functional-template",
  "vue/no-deprecated-html-element-is",
  "vue/no-deprecated-inline-template",
  "vue/no-deprecated-model-definition",
  "vue/no-deprecated-props-default-this",
  "vue/no-deprecated-router-link-tag-prop",
  "vue/no-deprecated-scope-attribute",
  "vue/no-deprecated-slot-attribute",
  "vue/no-deprecated-slot-scope-attribute",
  "vue/no-deprecated-v-bind-sync",
  "vue/no-deprecated-v-is",
  "vue/no-deprecated-v-on-native-modifier",
  "vue/no-deprecated-v-on-number-modifiers",
  "vue/no-deprecated-vue-config-keycodes",
  "vue/no-dupe-keys",
  "vue/no-dupe-v-else-if",
  "vue/no-duplicate-attr-inheritance",
  "vue/no-duplicate-attributes",
  "vue/no-duplicate-class-names",
  "vue/no-empty-component-block",
  "vue/no-empty-pattern",
  "vue/no-export-in-script-setup",
  "vue/no-expose-after-await",
  "vue/no-extra-parens",
  "vue/no-implicit-coercion",
  "vue/no-import-compiler-macros",
  "vue/no-irregular-whitespace",
  "vue/no-lifecycle-after-await",
  "vue/no-literals-in-template",
  "vue/no-lone-template",
  "vue/no-loss-of-precision",
  "vue/no-multi-spaces",
  "vue/no-multiple-objects-in-class",
  "vue/no-multiple-slot-args",
  "vue/no-multiple-template-root",
  "vue/no-mutating-props",
  "vue/no-negated-condition",
  "vue/no-negated-v-if-condition",
  "vue/no-parsing-error",
  "vue/no-potential-component-option-typo",
  "vue/no-ref-as-operand",
  "vue/no-ref-object-reactivity-loss",
  "vue/no-required-prop-with-default",
  "vue/no-reserved-component-names",
  "vue/no-reserved-keys",
  "vue/no-reserved-props",
  "vue/no-restricted-block",
  "vue/no-restricted-call-after-await",
  "vue/no-restricted-class",
  "vue/no-restricted-component-names",
  "vue/no-restricted-component-options",
  "vue/no-restricted-custom-event",
  "vue/no-restricted-html-elements",
  "vue/no-restricted-props",
  "vue/no-restricted-static-attribute",
  "vue/no-restricted-syntax",
  "vue/no-restricted-v-bind",
  "vue/no-restricted-v-on",
  "vue/no-root-v-if",
  "vue/no-setup-props-reactivity-loss",
  "vue/no-shared-component-data",
  "vue/no-side-effects-in-computed-properties",
  "vue/no-spaces-around-equal-signs-in-attribute",
  "vue/no-sparse-arrays",
  "vue/no-static-inline-styles",
  "vue/no-template-key",
  "vue/no-template-shadow",
  "vue/no-template-target-blank",
  "vue/no-textarea-mustache",
  "vue/no-this-in-before-route-enter",
  "vue/no-undef-components",
  "vue/no-undef-directives",
  "vue/no-undef-properties",
  "vue/no-unsupported-features",
  "vue/no-unused-components",
  "vue/no-unused-emit-declarations",
  "vue/no-unused-properties",
  "vue/no-unused-refs",
  "vue/no-unused-vars",
  "vue/no-use-computed-property-like-method",
  "vue/no-use-v-else-with-v-for",
  "vue/no-use-v-if-with-v-for",
  "vue/no-useless-concat",
  "vue/no-useless-mustaches",
  "vue/no-useless-template-attributes",
  "vue/no-useless-v-bind",
  "vue/no-v-for-template-key",
  "vue/no-v-for-template-key-on-child",
  "vue/no-v-html",
  "vue/no-v-model-argument",
  "vue/no-v-text",
  "vue/no-v-text-v-html-on-component",
  "vue/no-watch-after-await",
  "vue/object-curly-newline",
  "vue/object-curly-spacing",
  "vue/object-property-newline",
  "vue/object-shorthand",
  "vue/one-component-per-file",
  "vue/operator-linebreak",
  "vue/order-in-components",
  "vue/padding-line-between-blocks",
  "vue/padding-line-between-tags",
  "vue/padding-lines-in-component-definition",
  "vue/prefer-define-options",
  "vue/prefer-import-from-vue",
  "vue/prefer-prop-type-boolean-first",
  "vue/prefer-separate-static-class",
  "vue/prefer-single-event-payload",
  "vue/prefer-template",
  "vue/prefer-true-attribute-shorthand",
  "vue/prefer-use-template-ref",
  "vue/prefer-v-model",
  "vue/prop-name-casing",
  "vue/quote-props",
  "vue/require-component-is",
  "vue/require-default-export",
  "vue/require-default-prop",
  "vue/require-direct-export",
  "vue/require-emit-validator",
  "vue/require-explicit-emits",
  "vue/require-explicit-slots",
  "vue/require-expose",
  "vue/require-macro-variable-name",
  "vue/require-name-property",
  "vue/require-prop-comment",
  "vue/require-prop-type-constructor",
  "vue/require-prop-types",
  "vue/require-render-return",
  "vue/require-slots-as-functions",
  "vue/require-toggle-inside-transition",
  "vue/require-typed-object-prop",
  "vue/require-typed-ref",
  "vue/require-v-for-key",
  "vue/require-valid-default-prop",
  "vue/restricted-component-names",
  "vue/return-in-computed-property",
  "vue/return-in-emits-validator",
  "vue/script-indent",
  "vue/singleline-html-element-content-newline",
  "vue/slot-name-casing",
  "vue/sort-keys",
  "vue/space-in-parens",
  "vue/space-infix-ops",
  "vue/space-unary-ops",
  "vue/static-class-names-order",
  "vue/template-curly-spacing",
  "vue/this-in-template",
  "vue/use-v-on-exact",
  "vue/v-bind-style",
  "vue/v-for-delimiter-style",
  "vue/v-if-else-key",
  "vue/v-on-event-hyphenation",
  "vue/v-on-handler-style",
  "vue/v-on-style",
  "vue/v-slot-style",
  "vue/valid-attribute-name",
  "vue/valid-define-emits",
  "vue/valid-define-options",
  "vue/valid-define-props",
  "vue/valid-model-definition",
  "vue/valid-next-tick",
  "vue/valid-template-root",
  "vue/valid-v-bind",
  "vue/valid-v-bind-sync",
  "vue/valid-v-cloak",
  "vue/valid-v-else",
  "vue/valid-v-else-if",
  "vue/valid-v-for",
  "vue/valid-v-html",
  "vue/valid-v-if",
  "vue/valid-v-is",
  "vue/valid-v-memo",
  "vue/valid-v-model",
  "vue/valid-v-on",
  "vue/valid-v-once",
  "vue/valid-v-pre",
  "vue/valid-v-show",
  "vue/valid-v-slot",
  "vue/valid-v-text",
]
`;

exports[`Config Snapshots — Rule Names > solid config rules should match snapshot 1`] = `
[
  "solid/components-return-once",
  "solid/event-handlers",
  "solid/imports",
  "solid/jsx-no-duplicate-props",
  "solid/jsx-no-script-url",
  "solid/jsx-no-undef",
  "solid/jsx-uses-vars",
  "solid/no-array-handlers",
  "solid/no-destructure",
  "solid/no-innerhtml",
  "solid/no-proxy-apis",
  "solid/no-react-deps",
  "solid/no-react-specific-props",
  "solid/no-unknown-namespaces",
  "solid/prefer-classlist",
  "solid/prefer-for",
  "solid/prefer-show",
  "solid/reactivity",
  "solid/self-closing-comp",
  "solid/style-prop",
]
`;

exports[`Config Snapshots — Rule Names > svelte config rules should match snapshot 1`] = `
[
  "@typescript-eslint/no-unused-expressions",
  "no-inner-declarations",
  "no-self-assign",
  "no-unused-expressions",
  "svelte/comment-directive",
  "svelte/infinite-reactive-loop",
  "svelte/no-at-debug-tags",
  "svelte/no-at-html-tags",
  "svelte/no-dom-manipulating",
  "svelte/no-dupe-else-if-blocks",
  "svelte/no-dupe-on-directives",
  "svelte/no-dupe-style-properties",
  "svelte/no-dupe-use-directives",
  "svelte/no-export-load-in-svelte-module-in-kit-pages",
  "svelte/no-immutable-reactive-statements",
  "svelte/no-inner-declarations",
  "svelte/no-inspect",
  "svelte/no-navigation-without-resolve",
  "svelte/no-not-function-handler",
  "svelte/no-object-in-text-mustaches",
  "svelte/no-raw-special-elements",
  "svelte/no-reactive-functions",
  "svelte/no-reactive-literals",
  "svelte/no-reactive-reassign",
  "svelte/no-shorthand-style-property-overrides",
  "svelte/no-store-async",
  "svelte/no-svelte-internal",
  "svelte/no-unknown-style-directive-property",
  "svelte/no-unnecessary-state-wrap",
  "svelte/no-unused-props",
  "svelte/no-unused-svelte-ignore",
  "svelte/no-useless-children-snippet",
  "svelte/no-useless-mustaches",
  "svelte/prefer-svelte-reactivity",
  "svelte/prefer-writable-derived",
  "svelte/require-each-key",
  "svelte/require-event-dispatcher-types",
  "svelte/require-store-reactive-access",
  "svelte/system",
  "svelte/valid-each-key",
  "svelte/valid-prop-names-in-kit-pages",
]
`;

exports[`Config Snapshots — Rule Names > tanstack-start config rules should match snapshot 1`] = `
[
  "@tanstack/query/exhaustive-deps",
  "@tanstack/query/infinite-query-property-order",
  "@tanstack/query/mutation-property-order",
  "@tanstack/query/no-rest-destructuring",
  "@tanstack/query/no-unstable-deps",
  "@tanstack/query/no-void-query-fn",
  "@tanstack/query/stable-query-client",
  "@tanstack/router/create-route-property-order",
  "@tanstack/router/route-param-names",
]
`;

exports[`Config Snapshots — Rule Names > typescript config rules should match snapshot 1`] = `
[
  "@typescript-eslint/adjacent-overload-signatures",
  "@typescript-eslint/array-type",
  "@typescript-eslint/await-thenable",
  "@typescript-eslint/ban-ts-comment",
  "@typescript-eslint/ban-tslint-comment",
  "@typescript-eslint/class-literal-property-style",
  "@typescript-eslint/consistent-generic-constructors",
  "@typescript-eslint/consistent-indexed-object-style",
  "@typescript-eslint/consistent-type-assertions",
  "@typescript-eslint/consistent-type-definitions",
  "@typescript-eslint/consistent-type-exports",
  "@typescript-eslint/consistent-type-imports",
  "@typescript-eslint/dot-notation",
  "@typescript-eslint/indent",
  "@typescript-eslint/no-array-constructor",
  "@typescript-eslint/no-array-delete",
  "@typescript-eslint/no-base-to-string",
  "@typescript-eslint/no-confusing-non-null-assertion",
  "@typescript-eslint/no-confusing-void-expression",
  "@typescript-eslint/no-deprecated",
  "@typescript-eslint/no-duplicate-enum-values",
  "@typescript-eslint/no-duplicate-type-constituents",
  "@typescript-eslint/no-dynamic-delete",
  "@typescript-eslint/no-empty-function",
  "@typescript-eslint/no-empty-object-type",
  "@typescript-eslint/no-explicit-any",
  "@typescript-eslint/no-extra-non-null-assertion",
  "@typescript-eslint/no-extraneous-class",
  "@typescript-eslint/no-floating-promises",
  "@typescript-eslint/no-for-in-array",
  "@typescript-eslint/no-implied-eval",
  "@typescript-eslint/no-inferrable-types",
  "@typescript-eslint/no-invalid-void-type",
  "@typescript-eslint/no-meaningless-void-operator",
  "@typescript-eslint/no-misused-new",
  "@typescript-eslint/no-misused-promises",
  "@typescript-eslint/no-misused-spread",
  "@typescript-eslint/no-mixed-enums",
  "@typescript-eslint/no-namespace",
  "@typescript-eslint/no-non-null-asserted-nullish-coalescing",
  "@typescript-eslint/no-non-null-asserted-optional-chain",
  "@typescript-eslint/no-non-null-assertion",
  "@typescript-eslint/no-redundant-type-constituents",
  "@typescript-eslint/no-require-imports",
  "@typescript-eslint/no-this-alias",
  "@typescript-eslint/no-unnecessary-boolean-literal-compare",
  "@typescript-eslint/no-unnecessary-condition",
  "@typescript-eslint/no-unnecessary-template-expression",
  "@typescript-eslint/no-unnecessary-type-arguments",
  "@typescript-eslint/no-unnecessary-type-assertion",
  "@typescript-eslint/no-unnecessary-type-constraint",
  "@typescript-eslint/no-unnecessary-type-conversion",
  "@typescript-eslint/no-unnecessary-type-parameters",
  "@typescript-eslint/no-unsafe-argument",
  "@typescript-eslint/no-unsafe-assignment",
  "@typescript-eslint/no-unsafe-call",
  "@typescript-eslint/no-unsafe-declaration-merging",
  "@typescript-eslint/no-unsafe-enum-comparison",
  "@typescript-eslint/no-unsafe-function-type",
  "@typescript-eslint/no-unsafe-member-access",
  "@typescript-eslint/no-unsafe-return",
  "@typescript-eslint/no-unsafe-unary-minus",
  "@typescript-eslint/no-unused-expressions",
  "@typescript-eslint/no-unused-vars",
  "@typescript-eslint/no-useless-constructor",
  "@typescript-eslint/no-useless-default-assignment",
  "@typescript-eslint/no-var-requires",
  "@typescript-eslint/no-wrapper-object-types",
  "@typescript-eslint/non-nullable-type-assertion-style",
  "@typescript-eslint/only-throw-error",
  "@typescript-eslint/prefer-as-const",
  "@typescript-eslint/prefer-find",
  "@typescript-eslint/prefer-for-of",
  "@typescript-eslint/prefer-function-type",
  "@typescript-eslint/prefer-includes",
  "@typescript-eslint/prefer-literal-enum-member",
  "@typescript-eslint/prefer-namespace-keyword",
  "@typescript-eslint/prefer-nullish-coalescing",
  "@typescript-eslint/prefer-optional-chain",
  "@typescript-eslint/prefer-promise-reject-errors",
  "@typescript-eslint/prefer-reduce-type-parameter",
  "@typescript-eslint/prefer-regexp-exec",
  "@typescript-eslint/prefer-return-this-type",
  "@typescript-eslint/prefer-string-starts-ends-with",
  "@typescript-eslint/related-getter-setter-pairs",
  "@typescript-eslint/require-await",
  "@typescript-eslint/restrict-plus-operands",
  "@typescript-eslint/restrict-template-expressions",
  "@typescript-eslint/return-await",
  "@typescript-eslint/triple-slash-reference",
  "@typescript-eslint/unbound-method",
  "@typescript-eslint/unified-signatures",
  "@typescript-eslint/use-unknown-in-catch-callback-variable",
  "constructor-super",
  "dot-notation",
  "getter-return",
  "no-array-constructor",
  "no-class-assign",
  "no-const-assign",
  "no-dupe-args",
  "no-dupe-class-members",
  "no-dupe-keys",
  "no-empty-function",
  "no-func-assign",
  "no-implied-eval",
  "no-import-assign",
  "no-new-native-nonconstructor",
  "no-new-symbol",
  "no-obj-calls",
  "no-redeclare",
  "no-return-await",
  "no-setter-return",
  "no-this-before-super",
  "no-throw-literal",
  "no-undef",
  "no-unreachable",
  "no-unsafe-negation",
  "no-unused-expressions",
  "no-unused-vars",
  "no-useless-constructor",
  "no-var",
  "no-with",
  "prefer-const",
  "prefer-promise-reject-errors",
  "prefer-rest-params",
  "prefer-spread",
  "require-await",
  "semi",
]
`;

exports[`Config Snapshots — Rule Names > vite config rules should match snapshot 1`] = `
[
  "n/no-extraneous-import",
  "n/no-process-env",
  "n/no-unpublished-import",
]
`;

exports[`Config Snapshots — Rule Names > vue config rules should match snapshot 1`] = `
[
  "@typescript-eslint/no-unused-expressions",
  "no-unused-expressions",
  "vue/attribute-hyphenation",
  "vue/attributes-order",
  "vue/block-order",
  "vue/comment-directive",
  "vue/component-definition-name-casing",
  "vue/first-attribute-linebreak",
  "vue/html-closing-bracket-newline",
  "vue/html-closing-bracket-spacing",
  "vue/html-end-tags",
  "vue/html-indent",
  "vue/html-quotes",
  "vue/html-self-closing",
  "vue/jsx-uses-vars",
  "vue/max-attributes-per-line",
  "vue/multi-word-component-names",
  "vue/multiline-html-element-content-newline",
  "vue/mustache-interpolation-spacing",
  "vue/no-arrow-functions-in-watch",
  "vue/no-async-in-computed-properties",
  "vue/no-child-content",
  "vue/no-computed-properties-in-data",
  "vue/no-deprecated-data-object-declaration",
  "vue/no-deprecated-delete-set",
  "vue/no-deprecated-destroyed-lifecycle",
  "vue/no-deprecated-dollar-listeners-api",
  "vue/no-deprecated-dollar-scopedslots-api",
  "vue/no-deprecated-events-api",
  "vue/no-deprecated-filter",
  "vue/no-deprecated-functional-template",
  "vue/no-deprecated-html-element-is",
  "vue/no-deprecated-inline-template",
  "vue/no-deprecated-model-definition",
  "vue/no-deprecated-props-default-this",
  "vue/no-deprecated-router-link-tag-prop",
  "vue/no-deprecated-scope-attribute",
  "vue/no-deprecated-slot-attribute",
  "vue/no-deprecated-slot-scope-attribute",
  "vue/no-deprecated-v-bind-sync",
  "vue/no-deprecated-v-is",
  "vue/no-deprecated-v-on-native-modifier",
  "vue/no-deprecated-v-on-number-modifiers",
  "vue/no-deprecated-vue-config-keycodes",
  "vue/no-dupe-keys",
  "vue/no-dupe-v-else-if",
  "vue/no-duplicate-attributes",
  "vue/no-export-in-script-setup",
  "vue/no-expose-after-await",
  "vue/no-lifecycle-after-await",
  "vue/no-lone-template",
  "vue/no-multi-spaces",
  "vue/no-multiple-slot-args",
  "vue/no-mutating-props",
  "vue/no-parsing-error",
  "vue/no-ref-as-operand",
  "vue/no-required-prop-with-default",
  "vue/no-reserved-component-names",
  "vue/no-reserved-keys",
  "vue/no-reserved-props",
  "vue/no-shared-component-data",
  "vue/no-side-effects-in-computed-properties",
  "vue/no-spaces-around-equal-signs-in-attribute",
  "vue/no-template-key",
  "vue/no-template-shadow",
  "vue/no-textarea-mustache",
  "vue/no-unused-components",
  "vue/no-unused-vars",
  "vue/no-use-computed-property-like-method",
  "vue/no-use-v-if-with-v-for",
  "vue/no-useless-template-attributes",
  "vue/no-v-for-template-key-on-child",
  "vue/no-v-html",
  "vue/no-v-text-v-html-on-component",
  "vue/no-watch-after-await",
  "vue/one-component-per-file",
  "vue/order-in-components",
  "vue/padding-line-between-blocks",
  "vue/prefer-import-from-vue",
  "vue/prop-name-casing",
  "vue/require-component-is",
  "vue/require-default-prop",
  "vue/require-explicit-emits",
  "vue/require-prop-type-constructor",
  "vue/require-prop-types",
  "vue/require-render-return",
  "vue/require-slots-as-functions",
  "vue/require-toggle-inside-transition",
  "vue/require-v-for-key",
  "vue/require-valid-default-prop",
  "vue/return-in-computed-property",
  "vue/return-in-emits-validator",
  "vue/singleline-html-element-content-newline",
  "vue/this-in-template",
  "vue/use-v-on-exact",
  "vue/v-bind-style",
  "vue/v-on-event-hyphenation",
  "vue/v-on-style",
  "vue/v-slot-style",
  "vue/valid-attribute-name",
  "vue/valid-define-emits",
  "vue/valid-define-options",
  "vue/valid-define-props",
  "vue/valid-next-tick",
  "vue/valid-template-root",
  "vue/valid-v-bind",
  "vue/valid-v-cloak",
  "vue/valid-v-else",
  "vue/valid-v-else-if",
  "vue/valid-v-for",
  "vue/valid-v-html",
  "vue/valid-v-if",
  "vue/valid-v-is",
  "vue/valid-v-memo",
  "vue/valid-v-model",
  "vue/valid-v-on",
  "vue/valid-v-once",
  "vue/valid-v-pre",
  "vue/valid-v-show",
  "vue/valid-v-slot",
  "vue/valid-v-text",
]
`;
